--- a/frontend/templates/core/core.html
+++ b/frontend/templates/core/core.html
@@ -31,7 +31,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Mensagens</h4>
                         <p class="card-text">Configure, visualize e gerencie mensagens para os contatos.</p>
-                        <a href="{{ url_for('core.index') }}" class="btn btn-primary">Acessar</a>
+                        <a href="{{ url_for('core.message_list') }}" class="btn btn-primary">Acessar</a>
                     </div>
                 </div>
             </div>
