Ajustes no CSS, melhorias no Leads WhatsApp e redirecionamento de upload

--- a/frontend/templates/core/base_core.html
+++ b/frontend/templates/core/base_core.html
@@ -190,10 +190,10 @@
                 <a class="nav-link" href="{{ url_for('core.index') }}">Core</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('leadgen.upload') }}">Subir Leads</a>
+                <a class="nav-link" href="{{ url_for('leadgen.view_leads_whatsapp') }}">Contatos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('leadgen.view_leads_whatsapp') }}">Ver Leads</a>
+                <a class="nav-link" href="{{ url_for('core.phone_list') }}">Telefones</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('core.message_list') }}">Mensagens</a>
