--- a/frontend/templates/core/view_leads.html
+++ b/frontend/templates/core/view_leads.html
@@ -3,10 +3,10 @@
 {% block content %}
     <h2>Leads WhatsApp</h2>
 
-        <!-- Botão para redirecionar ao upload de CSV -->
-        <div class="text-center mb-4">
-            <a href="{{ url_for('leadgen.upload') }}" class="btn btn-primary btn-lg">Subir Leads via CSV</a>
-        </div>
+    <!-- Botão para redirecionar ao upload de CSV -->
+    <div class="text-center mb-4">
+        <a href="{{ url_for('leadgen.upload') }}" class="btn btn-primary btn-lg">Subir Leads via CSV</a>
+    </div>
 
     <table class="table">
         <thead>
@@ -17,6 +17,7 @@
                 <th>Data de Criação</th>
                 <th>Tag</th>
                 <th>Fonte</th>
+                <th>Ações</th> <!-- Nova coluna para ações -->
             </tr>
         </thead>
         <tbody>
@@ -28,6 +29,15 @@
                 <td>{{ lead.created_date.strftime('%Y-%m-%d %H:%M:%S') if lead.created_date else 'Data não disponível' }}</td>
                 <td>{{ lead.tag }}</td>
                 <td>{{ lead.source }}</td>
+                <td>
+                    <!-- Botão de editar -->
+                    <a href="{{ url_for('leadgen.edit_leads', lead_id=lead.id) }}" class="btn btn-warning btn-sm">Editar</a>
+                    
+                    <!-- Botão de deletar -->
+                    <form action="{{ url_for('leadgen.delete_leads', lead_id=lead.id) }}" method="POST" style="display:inline;">
+                        <button type="submit" class="btn btn-danger btn-sm">Excluir</button>
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
