Chery pick message upgrade

--- a/frontend/templates/core/new_phone.html
+++ b/frontend/templates/core/new_phone.html
@@ -15,8 +15,8 @@
                 {{ form.phone_token(class="form-control", placeholder="Digite o token do telefone") }}
             </div>
             <div class="form-group">
-                {{ form.description.label }}:
-                {{ form.description(class="form-control", placeholder="Descrição do telefone (opcional)") }}
+                {{ form.phone_description.label }}:
+                {{ form.phone_description(class="form-control", placeholder="Descrição do telefone (opcional)") }}
             </div>
             <button type="submit" class="btn btn-primary">Salvar</button>
         </form>
