--- a/frontend/templates/core/phone_list.html
+++ b/frontend/templates/core/phone_list.html
@@ -20,7 +20,7 @@
                 <tr>
                     <td>{{ phone.id }}</td>
                     <td>{{ phone.phone_number }}</td>
-                    <td>{{ phone.description }}</td>
+                    <td>{{ phone.phone_description }}</td>
                     <td>{{ phone.phone_token }}</td>
                     <td>
                         <a href="{{ url_for('core.edit_phone', id=phone.id) }}" class="btn btn-warning btn-sm">Editar</a>
