--- a/frontend/templates/core/edit_phone.html
+++ b/frontend/templates/core/edit_phone.html
@@ -15,8 +15,8 @@
                 {{ form.phone_token(class="form-control") }}
             </div>
             <div class="form-group">
-                {{ form.description.label }}:
-                {{ form.description(class="form-control") }}
+                {{ form.phone_description.label }}:
+                {{ form.phone_description(class="form-control") }}
             </div>
             <button type="submit" class="btn btn-primary">Atualizar</button>
         </form>
