--- a/frontend/templates/core/edit_leads.html
+++ b/frontend/templates/core/edit_leads.html
@@ -28,6 +28,21 @@
             </div>
 
             <div class="form-group">
+                <label for="store">Unidade</label>
+                {{ form.store(class="form-control", id="store") }}
+            </div>
+
+            <div class="form-group">
+                <label for="region">Região</label>
+                {{ form.region(class="form-control", id="region") }}
+            </div>
+
+            <div class="form-group">
+                <label for="tags">Tags</label>
+                {{ form.tags(class="form-control", id="tags") }}
+            </div>
+
+            <div class="form-group">
                 <label for="created_date">Data de Criação</label>
                 <input type="date" class="form-control" id="created_date" name="created_date" value="{{ form.created_date.data.strftime('%Y-%m-%d') if form.created_date.data else '' }}">
             </div>
