Frontend adjustment and data load into postgreSQL

--- a/frontend/templates/core/index.html
+++ b/frontend/templates/core/index.html
@@ -12,14 +12,13 @@
     </div>
 </section>
 
-<!-- Contact Form Section -->
+<!-- Benefits Section -->
 <section id="contact-form" class="py-5">
     <div class="container">
-        <div class="row">
-            <!-- Form Div -->
+        <div class="row justify-content-center">
             <!-- Pictures Div -->
             <div class="col-md-6">
-                <h2 class="mb-4 text-center" style="color: #000000;">Benefícios</h2>
+                <h2 class="mb-4 text-center" style="color: #FFFFFF;">Benefícios</h2>
                 <div class="row">
                     <div class="col-6 mb-3">
                         <img src="{{ url_for('static', filename='images/whatsapp-automation-1.png') }}" class="img-fluid rounded" alt="Automação de WhatsApp" loading="lazy">
