--- a/frontend/templates/core/new_message.html
+++ b/frontend/templates/core/new_message.html
@@ -20,7 +20,7 @@
                     <div class="form-group">
                         {{ form.text.label(class="form-label") }}
                         <!-- Ensure the textarea displays the message text with line breaks preserved -->
-                        <textarea class="form-control" name="text" rows="5" placeholder="Digite o texto">{{ form.text.data | nl2br }}</textarea>
+                        <textarea class="form-control" name="text" rows="5" placeholder="Digite o texto">{{ form.text.data }}</textarea>
                     </div>
 
                     <div class="form-group">
